# font-generator

./: .gitignore  .gitpod.Dockerfile  Cargo.toml  README.md  dev-server.sh  elm.json  index.html
backend/: Cargo.toml
backend/src/: active_test.rs  database.rs  endpoint.rs  endpoints.rs  error.rs  font.rs  main.rs  state.rs  test_session.rs  user.rs  util.rs
font-editor/: Cargo.toml
font-editor/src/: lib.rs  state.rs  ui.rs
font-editor/static/: imports.js  init.js
frontend/: Cargo.toml
frontend/src/: char_input.rs  error.rs  font_editor.rs  glyph_svg.rs  lib.rs
frontend/src/font_editor/: glyph_list.rs  state.rs
frontend/static/: style.css
shared/: Cargo.toml
shared/src/: glyph.rs  id.rs  lib.rs  util.rs
src/: Backend.elm  Bridge.elm  Env.elm  Frontend.elm  Main.elm  Types.elm
src/Evergreen/V1/: Bridge.elm  Types.elm
src/Evergreen/V1/Main/: Glyph.elm  Progress.elm
src/Evergreen/V1/Main/Page/: NewGlyphs.elm  Test.elm
src/Main/: DefaultGlyphs.elm  Glyph.elm  Progress.elm  Route.elm  Util.elm
src/Main/Page/: NewGlyphs.elm  Test.elm
