[package]
name = "font-editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1" }
rexie = { version = "0.4", default-features = false }
shared = { version = "0.1.0", path = "../shared" }
wasm-bindgen = { version = "0.2.81" }
wasm-bindgen-futures = { version = "0.4" }
